2009-11-01  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Darin Adler.

        Don't add '/' to the URL path if the it does not include '/' after the protocol component
        https://bugs.webkit.org/show_bug.cgi?id=30971

        Updating the expected result to reflect the change.

        * fast/loader/url-parse-1-expected.txt:

2009-10-31  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by John Sullivan.

        https://bugs.webkit.org/show_bug.cgi?id=30982
        createHTMLDocument doesn't escape ampersand and less-than in title

        * fast/dom/DOMImplementation/createHTMLDocument-title-expected.txt: Added.
        * fast/dom/DOMImplementation/createHTMLDocument-title.html: Added.

2009-11-01  Hironori Bono  <hbono@chromium.org>

        Reviewed by Darin Adler.

        Bug 30902: Need a layout test for Bug 28284
        This change just adds a simple test that calls TextInputController.firstRectForCharacterRange()
        before and after inserting a Thai character and compare their results.
        https://bugs.webkit.org/show_bug.cgi?id=30902

        * fast/text/international/thai-cursor-position-expected.txt: Added.
        * fast/text/international/thai-cursor-position.html: Added.
        * platform/gtk/Skipped: Skip this test because TextInputController is not implemented.
        * platform/qt/Skipped: ditto.
        * platform/win/Skipped: ditto.

2009-11-01  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Darin Adler.

        Fix assertion falure in RenderObjectChildList::updateBeforeAfterContent().

        [Crash (debug)] Combination of list-item and :after causes assertion failure
        https://bugs.webkit.org/show_bug.cgi?id=30944

        * fast/css/list-item-pseudo-nocrash-expected.txt: Added.
        * fast/css/list-item-pseudo-nocrash.html: Added.

2009-11-01  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30586