@@ -1,0 +1,5 @@
+Test for a bug 30992: Node.isDefaultNamespace doesn't convert empty strings to null.
+
+Should say PASS:
+
+PASS
